Fix infobox z-index on desktop

--- a/docs/index.css
+++ b/docs/index.css
@@ -50,7 +50,7 @@ body, html {
     right: 40px; top: 100px;
     background: white;
     width: 300px;
-    z-index: 1;
+    z-index: -1;
     opacity: 0;
     transition: opacity 200ms ease;
     display: none;
@@ -130,6 +130,7 @@ body, html {
         top: calc(100% - 80px);
         min-height: 100vh;
         transition: all 200ms ease;
+        z-index: 1;
     }
 
     #infobox.expanded {
